including wordbreak in text cells, fixes bug with cells overflowing when their text had no spaces

--- a/mod-picker/app/assets/stylesheets/pages/browse.scss
+++ b/mod-picker/app/assets/stylesheets/pages/browse.scss
@@ -166,6 +166,7 @@ table.browse-table {
   .text-cell {
     min-width: 125px;
     white-space: normal;
+    @include wordbreak;
   }
 
   .main-cell {
